Closed
Bug 1361980
Opened 8 years ago
Closed 8 years ago
Intermittent dom/promise/tests/test_webassembly_compile.html | application crashed [@ js::Mutex::lock()]
Categories
(Core :: JavaScript Engine, defect)
Core
JavaScript Engine
Tracking
()
RESOLVED
FIXED
mozilla55
| Tracking | Status | |
|---|---|---|
| firefox-esr52 | --- | unaffected |
| firefox53 | --- | unaffected |
| firefox54 | --- | unaffected |
| firefox55 | --- | fixed |
People
(Reporter: intermittent-bug-filer, Assigned: lth)
Details
(Keywords: crash, intermittent-failure)
Crash Data
Attachments
(2 files)
|
10.07 KB,
text/plain
|
Details | |
|
928 bytes,
patch
|
luke
:
review+
|
Details | Diff | Splinter Review |
Comment 1•8 years ago
|
||
Lars, do you know who could take a look at this crash ?
Flags: needinfo?(lhansen)
| Assignee | ||
Comment 2•8 years ago
|
||
I should probably look at that. This is similar to the failure I had yesterday on check-in; there seem to be some assumptions in the locking code that are just wrong, and I just happened to stumble over it. Has this been going on for a while?
Flags: needinfo?(lhansen)
| Assignee | ||
Comment 3•8 years ago
|
||
| Assignee | ||
Comment 4•8 years ago
|
||
(I may push this before review, depending on turnaround time, if the Sheriff approves of it as a quickfix.)
Pushed by lhansen@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/886acefb3825
Increase a lock priority to avoid conflict during sync deletion, r=me
Updated•8 years ago
|
Attachment #8864484 -
Flags: review?(luke) → review+
Comment 6•8 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
status-firefox55:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla55
Updated•8 years ago
|
status-firefox53:
--- → unaffected
status-firefox54:
--- → unaffected
status-firefox-esr52:
--- → unaffected
You need to log in
before you can comment on or make changes to this bug.
Description
•