Bug 1361980 - Increase a lock priority to avoid conflict during sync deletion, r=me