js/src/vm/MutexIDs.h
@@ -43,9 +43,10 @@
   _(TraceLoggerThreadState,      500) \
   _(DateTimeInfoMutex,           500) \
   _(IcuTimeZoneStateMutex,       500) \
-  _(ProcessExecutableRegion,     500) \
                                       \
+  /* ProcessExecutableRegion > PromiseTaskPtrVector */ \
   /* WasmCodeProfilingLabels > PromiseTaskPtrVector */ \
+  _(ProcessExecutableRegion,     550) \
   _(WasmCodeProfilingLabels,     550) \
                                       \
   _(TraceLoggerGraphState,       600) \
